crates/logic/src/models/snapshots/invoice_typst_logic__models__invoice_input_data__tests__serialize.snap
---
source: crates/logic/src/models/invoice_input_data.rs
expression: "DataFromDisk::sample()"
---
DataFromDisk(
  information: InvoiceInformation(
    number: 237,
    purchase_order: "PO-12345",
    date: Date(
      year: Year(2025),
      month: Month(5),
      day: Day(31),
    ),
    terms: Net(30),
    currency: "EUR",
  ),
  payment_info: (
    bank_name: "SEB",
    bic: "ESSESESS",
    iban: "SE3550000000054910000003",
  ),
  vendor: CompanyInformation(
    contact_person: Some("Ture Sventon"),
    organisation_number: "556123-4567",
    company_name: "Bra Detektiv AB",
    postal_address: PostalAddress(
      street_address: StreetAddress(
        line_1: "Storgatan 45",
        line_2: "4 tr",
      ),
      zip: "114 32",
      country: "Sweden",
      city: "Stockholm",
    ),
    vat_number: "SE556123456701",
  ),
  client: CompanyInformation(
    contact_person: Some("Sherlock Holmes"),
    organisation_number: "9876543-2101",
    company_name: "Holmes Ltd",
    postal_address: PostalAddress(
      street_address: StreetAddress(
        line_1: "221B Baker Street",
        line_2: "",
      ),
      zip: "NW1 6XE",
      country: "England",
      city: "London",
    ),
    vat_number: "GB987654321",
  ),
  line_items: Expenses([
    Item(
      transaction_date: Date(
        year: Year(2025),
        month: Month(5),
        day: Day(31),
      ),
      name: "Consulting services",
      unit_price: 50.0,
      quantity: 10.0,
      currency: "EUR",
    ),
  ]),
)
